# trade-market-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: test.csv
include/: CSVReader.h  MerkelMain.h  OrderBook.h  OrderBookEntry.h  Wallet.h
scripts/: build_win_x86_64.bat  clean_build.bat
src/: CMakeLists.txt  CSVReader.cpp  MerkelMain.cpp  OrderBook.cpp  OrderBookEntry.cpp  Wallet.cpp  main.cpp  trade_market.vcxproj  trade_market.vcxproj.filters
tests/: test.cpp
